--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,14 +4,14 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer class="bg-[#F0FAFF]">
-  <div class="py-20">列举菜单，做SEO</div>
+  <!-- <div class="py-20">列举菜单，做SEO</div>
   <div class="flex justify-center py-10 gap-20">
-    <p>&copy; 2024 ChinaCheckup. All Rights Reserved</p>
+    <p>&copy; 2024 ChinaSupport. All Rights Reserved</p>
     <p class="socials">
       <a href="https://twitter.com/me"> Twitter</a>
       <a href="https://github.com/me"> GitHub</a>
     </p>
-  </div>
+  </div> -->
 </footer>
 <style>
   .socials {
