--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -6,7 +6,10 @@ interface Props {
   description?: string | undefined;
 }
 
-const { title = 'Jeanine White: Personal Site', description = 'The personal site of Jeanine White' } = Astro.props;
+const {
+  title = 'ChinaSupport - Your China Concierge',
+  description = "Discover China-Support, your one-stop solution for all services within China. We're dedicated to solving every challenge, providing tailored assistance, and ensuring seamless business operations across the country. Trust our expertise to navigate the complexities of Chinese markets and achieve your goals with ease"
+} = Astro.props;
 ---
 
 <meta charset="UTF-8" />
@@ -15,13 +18,6 @@ const { title = 'Jeanine White: Personal Site', description = 'The personal site
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;600&display=swap"
-  rel="stylesheet"
-/>
 <script is:inline>
   // This code is inlined in the head to make dark mode instant & blocking.
   const getThemePreference = () => {
