--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,9 +18,10 @@ const { title, description } = Astro.props;
 <html lang="en">
   <head>
     <MainHead title={title} description={description} />
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" defer></script>
   </head>
   <body>
-    <div class="stack backgrounds h-screen w-screen flex flex-col">
+    <div class="h-screen w-screen flex flex-col">
       <Nav />
       <div class="flex-1">
         <slot />
@@ -29,7 +30,6 @@ const { title, description } = Astro.props;
     </div>
 
     <script>
-      // Add “loaded” class once the document has completely loaded.
       addEventListener('load', () => document.documentElement.classList.add('loaded'));
     </script>
   </body>
