--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,11 +41,11 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
   <div class="gap-20 lg:gap-48">
     <div class="bg-cover bg-center bg-[url('/assets/home/香港.jpg')] h-[500px]">
       <div class="h-full flex flex-col items-center justify-center text-white">
-        <h1 class="pb-4">Welcome to ChinaCheckup</h1>
+        <h1 class="pb-4">Welcome to ChinaSupport</h1>
         <div class="text-2xl pb-6">Your trusted source for detailed, objective, and confidential reports on Chinese companies.</div>
         <div class="text-xl mb-9">Make informed business decisions with confidence.</div>
 
-        <CallToAction href="/services/"> Contact US </CallToAction>
+        <CallToAction href="#contact-us"> Contact US </CallToAction>
       </div>
     </div>
 
@@ -67,21 +67,46 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
           </div>
 
           <p class="mt-20 text-3xl text-center font-semibold leading-7">Why Choose Us</p>
-          <div class="mt-10 text-lg leading-8">提供最具性价比的商品，我们的1对1专属服务将完美解决您的所有商品代购需求，让您的采购之旅轻松无忧。</div>
+          <div class="mt-10 text-lg leading-8">
+            We offer the most cost-effective products on the market. Our one-on-one exclusive service will perfectly address all your shopping needs,
+            making your purchasing journey a breeze and worry-free.
+          </div>
 
           <dl class="mx-auto mt-8 grid max-w-2xl grid-cols-1 gap-8 text-base leading-7 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:gap-x-16">
             {reasonList.map((reason) => <Reason reason={reason} />)}
           </dl>
 
-          <p class="mt-20 text-3xl text-center font-semibold leading-7">了解我们如何帮助您在中国取得成功</p>
+          <p class="mt-20 text-3xl text-center font-semibold leading-7">Learn how we can help you achieve success in China.</p>
           <div class="flex justify-center items-cente">
             <iframe class="mt-10" width="800" height="400" src="https://www.youtube.com/embed/视频ID" allowfullscreen></iframe>
           </div>
 
-          <p class="mt-20 text-3xl text-center font-semibold leading-7">联系我们</p>
-          <div class="flex justify-between space-x-20 mt-10">
-            <div>步骤说明</div>
-            <ContactToMe class:list={'w-60'} />
+          <p class="mt-20 text-3xl text-center font-semibold leading-7" id="contact-us">Feel free to reach out to us</p>
+          <div class="grid grid-cols-2 gap-x-5 mt-10">
+            <div class="flex flex-col gap-y-3">
+              <div class="text-xl font-semibold">Quick process overview - 5 Easy Steps</div>
+              <div>
+                <div class="font-semibold">Step 1: Reach out to us.</div>
+                <dd class="text-sm">Fill in the contact form, briefly describe your needs, and start the conversation.</dd>
+              </div>
+              <div>
+                <div class="font-semibold">Step 2: Communication confirmation.</div>
+                <dd class="text-sm">We engage in in-depth discussions with you to ensure we truly understand your real needs.</dd>
+              </div>
+              <div>
+                <div class="font-semibold">Step 3: Exclusive service.</div>
+                <dd class="text-sm">Provide one-on-one service to carefully select cost-effective products for you.</dd>
+              </div>
+              <div>
+                <div class="font-semibold">Step 4: Confirm payment.</div>
+                <dd class="text-sm">Review product information and quickly complete a secure payment process.</dd>
+              </div>
+              <div>
+                <div class="font-semibold">Step 5: Product shipping.</div>
+                <dd class="text-sm">Products are dispatched promptly, with tracking provided to ensure fast delivery.</dd>
+              </div>
+            </div>
+            <ContactToMe />
           </div>
         </div>
       </div>
@@ -97,7 +122,7 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
         </div>
       </div>
       <div class="mt-20 flex flex-col items-center mb-5">
-        <h2 class="my-4 text-center text-3xl font-bold">ChinaCheckup by the Numbers</h2>
+        <h2 class="my-4 text-center text-3xl font-bold">ChinaSupport by the Numbers</h2>
         <div class="my-5 flex mx-auto px-6 lg:px-8">
           <div class="text-center w-80">
             <h3 class="text-6xl font-bold py-6">58</h3>
