--- a/src/components/ContactToMe.astro
+++ b/src/components/ContactToMe.astro
@@ -62,6 +62,11 @@ const { class: className } = Astro.props;
         loading
       </button>
     </div>
+    <div>
+      If your submission fails, you can directly send an email to <a href="mailto:support@china-support.com" class="text-blue-500 underline"
+        >support@china-support.com</a
+      >.
+    </div>
   </form>
   <dialog id="my_modal_1" class="modal">
     <div class="modal-box">
