--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,10 +76,10 @@ const reasonList: { title: string; describe: string; img?: string }[] = [
             {reasonList.map((reason) => <Reason reason={reason} />)}
           </dl>
 
-          <p class="mt-20 text-3xl text-center font-semibold leading-7">Learn how we can help you achieve success in China.</p>
+          <!-- <p class="mt-20 text-3xl text-center font-semibold leading-7">Learn how we can help you achieve success in China.</p>
           <div class="flex justify-center items-cente">
             <iframe class="mt-10" width="800" height="400" src="https://www.youtube.com/embed/视频ID" allowfullscreen></iframe>
-          </div>
+          </div> -->
 
           <p class="mt-20 text-3xl text-center font-semibold leading-7" id="contact-us">Feel free to reach out to us</p>
           <div class="grid grid-cols-2 gap-x-5 mt-10">
